[tool.poetry]
name = "Genetic_Algorithms_-_ML_for_programmers"
version = "0.1.0"
description = ""
authors = ["https://github.com/mike-shields-dev | https://www.michael-shields.co.uk/"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"